--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "sass": "^1.49.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
